# pilot-hdc-auth

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  build_and_push.sh  docker-compose.yml  ldap_query_config.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
app/: __init__.py  __main__.py  config.py  logger.py
app/components/: exceptions.py
app/models/: accounts.py  api_response.py  base_models.py  default_roles.py  events.py  external.py  invitation.py  ops_admin.py  ops_user.py  permissions.py  permissions_schema.py  sql_events.py  sql_invitation.py  sql_ldap_id.py  user_account_management.py  user_create.py
app/resources/: error_handler.py  utils.py
app/routers/: accounts.py  api_registry.py  ops_admin.py  ops_user.py  user_account_management.py  vm_account_management.py
migrations/: env.py
migrations/scripts/: create_db.sql  create_schema.sql  default_rules.sql
migrations/versions/: 0005_adding_permissions_metadata_table.py  0006_populating_permissions_metadata.py  0007_updating_copy_permission.py  0008_greenroom_upload_permissions.py  0009_permissions_name_updates.py  0010_adding_role_table.py  0011_add_index_to_casbin_project_code_column.py  0012_adding_sorting_field.py  0013_add_default_casbin_rules.py  3bdd1cfc1f9e_added_ldap_id_table.py  4f5ec3f0ac37_added_invitation_table.py  c50577f5d93e_adding_event_table.py  e86797550c26_adding_casbin_table.py
tests/: conftest.py  test_admin.py  test_user.py  test_user_account_management.py  test_vm_account_management.py
tests/fixtures/: casbin.py  db.py  fake.py
tests/routers/: test_ops_user.py
(+43 files in other folders)
